force-app/main/default/objects/North_Star_POV__c/North_Star_POV__c.object-meta.xml
<CustomObject>
    <label>North Star POV</label>
    <nameField>
        <displayFormat>POV-{000000}</displayFormat>
        <label>POV ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>North Star POVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>