force-app/main/default/objects/North_Star_POV__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>North Star POVs</relationshipLabel>
    <relationshipName>North_Star_POVs</relationshipName>
    <type>Lookup</type>
</CustomField>