force-app/main/default/objects/North_Star_POV__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Account_Name__r.Owner.FirstName + &quot; &quot; + Account_Name__r.Owner.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>