force-app/main/default/objects/North_Star_POV__c/fields/Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_ID__c</fullName>
    <formula>Account_Owner__c</formula>
    <label>Account Owner ID</label>
    <type>Text</type>
</CustomField>