force-app/main/default/objects/North_Star_POV__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <inlineHelpText>Name of the business or business unit for which you&apos;re creating a POV (e.g. NCR Voyix, AWS).  This name will be by GenAI to pull any public company info</inlineHelpText>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>