force-app/main/default/objects/North_Star_POV__c/fields/Core_SE__c.field-meta.xml
<CustomField>
    <fullName>Core_SE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core SE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>North_Star_POVs</relationshipName>
    <type>Lookup</type>
</CustomField>