force-app/main/default/objects/North_Star_POV__c/fields/Future_State_1__c.field-meta.xml
<CustomField>
    <fullName>Future_State_1__c</fullName>
    <inlineHelpText>Future state vision to help this company achieve strategic priority 1.</inlineHelpText>
    <label>Future State Vision 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>