force-app/main/default/objects/North_Star_POV__c/fields/Long_POV__c.field-meta.xml
<CustomField>
    <fullName>Long_POV__c</fullName>
    <inlineHelpText>GenAI output of the full-length POV talk track, to be used as a talk track for the POV Google Slide deliverable.</inlineHelpText>
    <label>Generated POV (Long)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>