force-app/main/default/objects/North_Star_POV__c/fields/March_Madness_Status__c.field-meta.xml
<CustomField>
    <fullName>March_Madness_Status__c</fullName>
    <label>March Madness Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>RVP Winner</fullName>
            </value>
            <value>
                <fullName>AVP Winner</fullName>
            </value>
            <value>
                <fullName>SVP Winner</fullName>
            </value>
            <value>
                <fullName>AI Winner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>