force-app/main/default/objects/North_Star_POV__c/fields/Miro_Link__c.field-meta.xml
<CustomField>
    <fullName>Miro_Link__c</fullName>
    <label>Link to Miro Board</label>
    <type>Url</type>
</CustomField>