force-app/main/default/objects/North_Star_POV__c/fields/Obstacles_3__c.field-meta.xml
<CustomField>
    <fullName>Obstacles_3__c</fullName>
    <inlineHelpText>Obstacles that are standing in the way of this company achieving strategic objective 3.</inlineHelpText>
    <label>Obstacles 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>