force-app/main/default/objects/North_Star_POV__c/fields/POV_Link__c.field-meta.xml
<CustomField>
    <fullName>POV_Link__c</fullName>
    <inlineHelpText>After you create your POV deck, add the link to Google Slide Deck</inlineHelpText>
    <label>Link to POV</label>
    <type>Url</type>
</CustomField>