force-app/main/default/objects/North_Star_POV__c/fields/POV_Stage__c.field-meta.xml
<CustomField>
    <fullName>POV_Stage__c</fullName>
    <label>POV Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Workshop Scheduled</fullName>
            </value>
            <value>
                <fullName>Presentation Design</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
            <value>
                <fullName>Customer Exec Approved</fullName>
            </value>
            <value>
                <fullName>Pipeline Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>