force-app/main/default/objects/North_Star_POV__c/fields/Priority_1__c.field-meta.xml
<CustomField>
    <fullName>Priority_1__c</fullName>
    <inlineHelpText>Description of the first strategic priority which informs this POV.</inlineHelpText>
    <label>Strategic Priority 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>