force-app/main/default/objects/North_Star_POV__c/fields/Priority_2__c.field-meta.xml
<CustomField>
    <fullName>Priority_2__c</fullName>
    <inlineHelpText>Description of the second strategic priority which informs this POV.</inlineHelpText>
    <label>Strategic Priority 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>