force-app/main/default/objects/North_Star_POV__c/fields/Priority_3__c.field-meta.xml
<CustomField>
    <fullName>Priority_3__c</fullName>
    <inlineHelpText>Description of the third strategic priority which informs this POV.</inlineHelpText>
    <label>Strategic Priority 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>