force-app/main/default/objects/North_Star_POV__c/fields/Short_POV__c.field-meta.xml
<CustomField>
    <fullName>Short_POV__c</fullName>
    <inlineHelpText>GenAI Output of the shortened POV talk track.</inlineHelpText>
    <label>Generated POV (Short)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>