force-app/main/default/objects/North_Star_POV__c/fields/Themes__c.field-meta.xml
<CustomField>
    <fullName>Themes__c</fullName>
    <inlineHelpText>Solution themes that describe the future vision.</inlineHelpText>
    <label>Themes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>