force-app/main/default/objects/North_Star_POV__c/fields/Why_Now__c.field-meta.xml
<CustomField>
    <fullName>Why_Now__c</fullName>
    <inlineHelpText>Description for why the company should act now.</inlineHelpText>
    <label>Why Now</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>