force-app/main/default/objects/North_Star_POV__c/fields/Why_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Why_Salesforce__c</fullName>
    <inlineHelpText>Description for why Salesforce is the best solution to help this company achieve the strategic objectives.</inlineHelpText>
    <label>Why Salesforce</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>