force-app/main/default/objects/North_Star_POV__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>POV_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>