force-app/main/default/objects/North_Star_POV__c/listViews/My_North_Star_POVs.listView-meta.xml
<ListView>
    <fullName>My_North_Star_POVs</fullName>
    <columns>NAME</columns>
    <columns>Business_Name__c</columns>
    <columns>POV_Stage__c</columns>
    <columns>POV_Link__c</columns>
    <columns>Miro_Link__c</columns>
    <filterScope>Mine</filterScope>
    <label>My North Star POVs</label>
</ListView>